Bug 506751 - hidden files cannot be played
Summary: hidden files cannot be played
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.4.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-08 09:39 UTC by Philipp
Modified: 2025-07-24 07:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp 2025-07-08 09:39:01 UTC
Haruna can't open hidden files (files starting with a dot)
Comment 1 kdmw.629 2025-07-09 05:55:47 UTC
I tried to play a mp4 file in Haruna 1.4.0, whose name started with a dot/period and it did not play. The video file name is ".Bug506751.mp4". Haruna does not display any error message or popup to show the issue. 
Running Haruna from Konsole, redirecting the Standard Error and Standard Output, and then trying to open the file does not result in any logs being captured.
Running the command, "journalctl --follow", then starting Haruna and trying to open a file whose name starts with a dot/period also does not result in any logs being captured in JournalD. 


@Philipp Please provide the following pieces of information. This helps the developers. 
1) SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version:  
KDE Frameworks Version: 
Qt Version: 

2) STEPS TO REPRODUCE
Please provide detailed steps, including file name, file type/extension, path, etc. If required take screenshots as a JPEG and attach them. What file formats did you try to play? AVI or OGG or something else?

3) OBSERVED RESULT
Please provide is observed. Is there any error observed. If you are using SystemD JournalD then please take the journal output and attach it as a text file. Do not attach the full journal only the relevant entries.

4) OBSERVED RESULT
What is your expectation. 

5) ADDITIONAL INFORMATION
If any additional information that is relevant and could be useful please do mention this.
Comment 2 Philipp 2025-07-10 20:12:00 UTC
thanks for caring kdmw.629!

I already supplied the System and Version information in the mask, you can see it on the top of the page.
Haruna 1.4.0 on OpenSUSE Tumbleweed 20250709 (KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0, Qt Version: 6.9.1, Kernel Version: 6.15.4-1-default (64-bit), Graphics Platform: Wayland).

No error message is displayed. Haruna launches but doesn't open the hidden video file. Haruna behaves just as if it would have been launched from the application launcher for example.  I tried with hidden .mkv files.
It is reproducible every time.
Even if I launch Haruna and the drag and drop hidden video files to Haruna nothing happens. Same if I try to open the hidden files with the 'Open File' menu, nothing happens.

I would have expected Haruna to play the file or at least show an error message.


(In reply to kdmw.629 from comment #1)
> I tried to play a mp4 file in Haruna 1.4.0, whose name started with a
> dot/period and it did not play. The video file name is ".Bug506751.mp4".
> Haruna does not display any error message or popup to show the issue. 
> Running Haruna from Konsole, redirecting the Standard Error and Standard
> Output, and then trying to open the file does not result in any logs being
> captured.
> Running the command, "journalctl --follow", then starting Haruna and trying
> to open a file whose name starts with a dot/period also does not result in
> any logs being captured in JournalD. 
> 
> 
> @Philipp Please provide the following pieces of information. This helps the
> developers. 
> 1) SOFTWARE/OS VERSIONS
> Windows: 
> macOS: 
> (available in the Info Center app, or by running `kinfo` in a terminal
> window)
> Linux/KDE Plasma: 
> KDE Plasma Version:  
> KDE Frameworks Version: 
> Qt Version: 
> 
> 2) STEPS TO REPRODUCE
> Please provide detailed steps, including file name, file type/extension,
> path, etc. If required take screenshots as a JPEG and attach them. What file
> formats did you try to play? AVI or OGG or something else?
> 
> 3) OBSERVED RESULT
> Please provide is observed. Is there any error observed. If you are using
> SystemD JournalD then please take the journal output and attach it as a text
> file. Do not attach the full journal only the relevant entries.
> 
> 4) OBSERVED RESULT
> What is your expectation. 
> 
> 5) ADDITIONAL INFORMATION
> If any additional information that is relevant and could be useful please do
> mention this.
Comment 3 kdmw.629 2025-07-21 07:32:27 UTC
Changing the status to Reported. As this is a valid bug. KDE developers will pick this up based on their prioritization. I will not be changing the status of the bug to CONFIRMED as that will be done by developers. 

The work around  is to change the file name and remove the dot/period at the start of the filename. So that it is no longer hidden.

I have checked with MPV media player and, there we can play media files starting with a dot/period, i.e. hidden files.
Comment 4 george fb 2025-07-24 07:13:44 UTC
Git commit cba47e8304ae3dee511cbe1ea4808e014a92125e by George Florea Bănuș.
Committed on 24/07/2025 at 07:10.
Pushed by georgefb into branch 'master'.

playlistmodel: QDirIterator: get hidden files too

M  +1    -1    src/models/playlistmodel.cpp

https://invent.kde.org/multimedia/haruna/-/commit/cba47e8304ae3dee511cbe1ea4808e014a92125e