playlistmodel: QDirIterator: get hidden files too

BUG: 506751